--- a/index.css
+++ b/index.css
@@ -1,27 +1,57 @@
-/* img {
-    width: 400px;
-} */
+/* Simply change position: absolute to make icons draggable */
 
-.fit-image{
+html, body { overflow-x: hidden !important; }
+
+
+.App {
+  text-align: center;
+  background-image: url("https://www.newegg.com/insider/wp-content/uploads/windows_xp_bliss-wide.jpg");  
+}
+
+.contactLinks {
+  text-decoration: none;
+  color: white
+}
+
+body {
+  color: white;
+  font-weight: 600;
+  -webkit-text-stroke-width: 0.1px;
+  -webkit-text-stroke-color: gray;
+  margin-left: 1rem;
+  margin-top: 2rem;
+}
+
+.myFooter {
+  text-align: center;  
+  position: absolute;
+    bottom: 30px;
     width: 100%;
-    /* width: 250px; */
-    object-fit: cover;
-    height: 300px; /* only if you want fixed height */
 }
 
-.header {
-    padding-top: 50px;
-    padding-left: 10px;
+.desktopIcon {
+  object-fit: cover;
+  position: relative;
+  background-repeat: no-repeat;
+  width: 200px;
 }
 
-.headlinesText {
-    padding-top: 20px;
+#txtImage {
+  padding-left: 13px;
 }
 
-.details {
-    padding-left: 10px;
+#mydivheader {
+  padding: 10px;
+  cursor: move;
+  z-index: 10;
+  /* background-color: #2196F3; */
+  /* color: #fff; */
 }
 
-.navbar-brand {
-    padding-left: 10px;
+img {
+  max-width:50%;
+  max-height:50%;
+  max-height: 85px;
+  align-content: center;
 }
+
